# asteroids_single-player

./: .gitignore  audio.py  config.py  controls.py  game.py  main.py  pyproject.toml  sprites.py  systems.py  utils.py
client/: audio.py  audio_manager.py  game.py  renderer.py
core/: collisions.py  commands.py  config.py  entities.py  utils.py  world.py
docs/: ARCHITECTURE.md
